tests/ui/traits/non_lifetime_binders/late-const-param-wf.stderr
error: late-bound const parameters cannot be used currently
  --> $DIR/late-const-param-wf.rs:5:15
   |
LL |     for<const C: usize> [(); C]: Copy,
   |               ^

error: aborting due to 1 previous error

